Fix height by using overflow

--- a/src/NewsletterRoute.css
+++ b/src/NewsletterRoute.css
@@ -14,6 +14,8 @@
 
 .rightPanel {
   padding: 0 10px;
+  height:100%;
+  overflow-y: auto;
 }
 
 .vertPanels {
